Whitespace fixes in Sass files

--- a/public/app/sass/modules/_blocks.scss
+++ b/public/app/sass/modules/_blocks.scss
@@ -5,23 +5,17 @@
 // Responsive containers ------------------------------------------- /
 
 %responsive-body {
+
   @extend %container-wide;
   @include rem(padding, 2rem);
+
   @include to($tablet) {
     @include rem(padding, 1rem);
   }
 
-  @include from-to($tablet, $wide) {
-    width: 90%;
-  }
-
-  @include from-to($wide, $wider) {
-    width: 70%;
-  }
-
-  @include from($wider) {
-    width: 60%;
-  }
+  @include from-to($tablet, $wide) { width: 90% }
+  @include from-to($wide, $wider)  { width: 70% }
+  @include from($wider)            { width: 60% }
 }
 
 %responsive-content {
@@ -83,6 +77,7 @@
   clear: both;
   cursor: pointer;
   @include rem(padding, 0.25rem 0);
+
   &:hover {
     background-color: lighten($color-accent, 10);
     color: white;
